--- a/src/view/TelaLogin.form
+++ b/src/view/TelaLogin.form
@@ -38,10 +38,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="txErro" pref="225" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txLogin" pref="225" max="32767" attributes="0"/>
-                              <Component id="txSenha" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="txLogin" pref="225" max="32767" attributes="0"/>
+                          <Component id="txSenha" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -93,6 +91,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txSenha">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txSenhaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="txErro">
       <Properties>
